final commit.... AAHHHHHHHH

--- a/code/index.html
+++ b/code/index.html
@@ -23,9 +23,9 @@
           <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">Funny</a>
         </li>
 
-        <li class="">
+        <li>
           <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">
-            <img src="../img/clickbait.jpg" alt="">
+            <img src="../img/clickbait.jpg" alt="clickbait logo">
           </a>
         </li>
 
@@ -44,11 +44,11 @@
       <!-- The big news content -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
         <article>
-          <div class="corner-ribbon top-left exclude-mobile exclude-tablet">THIS JUST IN!</div>
-          <img src="../img/DT_2020.jpg" class="exclude-mobile exclude-desktop" alt="">
+          <div class="corner-ribbon shadow sticky top-left exclude-mobile exclude-tablet">THIS JUST IN!</div>
+          <img src="../img/DT_2020.jpg" class="exclude-mobile exclude-desktop" alt="Donald Trump">
             <h3 class="large-h3">Breaking News!</h3>
-            <p class="large-text">Donalt Trump re-elected! <br>
-            See his opening speach right hear
+            <p class="large-text">Donald Trump re-elected! <br>
+            See his opening speach right here
             </p>
         </article>
       </a>
@@ -60,9 +60,9 @@
       <!-- The small news content  -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/RM.jpeg" alt="">
-          <h3 class="small-h3">You vote matters!</h3>
-          <p class="small-text">Family guy or simpsons? </p>
+          <img src="../img/RM.jpeg" alt="Rick from Rick and Morty show">
+          <h3 class="small-h3">Your vote matters!</h3>
+          <p class="small-text">Family guy or Simpsons? </p>
           <ul class="small-tag">
             <li>Funny</li>
             <li>Fresh</li>
@@ -73,7 +73,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/ernst.jpg" alt="">
+          <img src="../img/ernst.jpg" alt="Ernst Kirchsteiger">
           <h3 class="small-h3">Read it all!</h3>
           <p class="small-text">Ernst´s private sex tape on the loose </p>
           <ul class="small-tag">
@@ -85,7 +85,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/loket.jpg" alt="">
+          <img src="../img/loket.jpg" alt="Leif Loket Olssoon">
           <h3 class="small-h3">WHAT?!</h3>
           <p class="small-text">Leif "loket" Olsson daiting Bianca´s mother in law! </p>
           <ul class="small-tag">
@@ -97,7 +97,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/insult.jpg" alt="">
+          <img src="../img/insult.jpg" alt="Random dude insults">
           <h3 class="small-h3">10 people you must insult before you die</h3>
           <p class="small-text">Nr 3 is legendary. </p>
           <ul class="small-tag">
@@ -109,9 +109,9 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
+          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
             <li>Gossip</li>
             <li>Love</li>
@@ -121,9 +121,9 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
+          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
             <li>Gossip</li>
             <li>Love</li>
@@ -133,9 +133,9 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
+          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
             <li>Gossip</li>
             <li>Love</li>
@@ -145,9 +145,9 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
+          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
             <li>Gossip</li>
             <li>Love</li>
