--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,106 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <img class="logo" src="logo.png" alt="logo">
+    <h1>World Times</h1>
+    <nav>
+      <a href="#">LATEST NEWS</a>
+      <a href="#">SUBSCRIBE</a>
+      <a href="#">ACCOUNT</a>
+      <a href="#">SEARCH</a>
+    </nav>
+
+    <!-- Some kind of logo and navbar -->
+  </header>
+
+  <p id='date'>Monday, January 20, 2020</p>
+
+  <!-- The big news content -->
+  <!--<section class="container">-->
+  <section class="big-news">
+    <div>
+      <img src="Brexit.jpg" alt="Placeholder big">
+    </div>
+    <div>
+      <h2 class="heading">Brexit day: what happens after January 31?</h2>
+      <p class="text">Brexit day is fast approaching, with the UK on track to officially leave the European Union (EU)
+        in just a few
+        weeks time. But how did we get to this stage and what is in the Brexit deal?
+        Here is everything you need to know about the UK's departure, including what the deal means for UK citizens and
+        the changes to travel, investments and savings we can expect to see post-Brexit.
+      </p>
+    </div>
+  </section>
+  <!--</section>-->
+
+  <!-- The other news  -->
+  <section class="other-news">
+    <a href="#">
+      <img src="trump.jpg" alt="Placeholder-small">
+      <p>A Step-by-Step Guide to Trump’s Impeachment Trial</p>
+      <div>
+        <p>
+          WASHINGTON — The House intends to vote this week to send its articles of impeachment against President Trump
+          to the Senate, prompting only the third impeachment trial of a president in American history.
+          The vote will put to rest nearly a month of uncertainty over when a trial might begin and quickly turn over to
+          the Senate a historic debate over whether Mr. Trump committed what the Constitution describes as “high crimes
+          and misdemeanors.”
+          The Republican-led Senate is all but certain to vote eventually to acquit Mr. Trump. But the path forward
+          remains murky, with few historical precedents and scant constitutional guidance to light the way. While
+          decades-old congressional rules will be dusted off in the coming days, other, potentially grave decisions that
+          could color the outcome of the trial will be settled on the fly.
+          Here is how we expect things to play out on Capitol Hill in the coming days and weeks.</p>
+      </div>
+    </a>
+    <a href="#">
+      <img src="australia.jpg" alt="Placeholder-small">
+      <p>Bracing for an Even Worse Weekend of Australia Fires</p>
+    </a>
+    <a href="#">
+      <img src="greta.jpg" alt="Placeholder-small">
+      <p>2019 Was Second Hottest Year on Record</p>
+    </a>
+    <a href="#">
+      <img src="greta.jpg" alt="Placeholder-small">
+      <p>2019 Was Second Hottest Year on Record</p>
+    </a>
+  </section>
+  <section class="other-news">
+    <a href="#">
+      <img src="vagrant.jpg" alt="Placeholder-small">
+      <p>Swedish town launches controversial £21 begging permit</p>
+    </a>
+    <a href="#">
+      <img src="royalty.jpg" alt="Placeholder-small">
+      <p>Harry and Meghan’s Hard Exit</p>
+    </a>
+    <a href="#">
+      <img src="space.jpg" alt="Placeholder-small">
+      <p>SpaceX lifts off, destroys rocket in last big test of crew capsule</p>
+    </a>
+    <a href="#">
+      <img src="space.jpg" alt="Placeholder-small">
+      <p>SpaceX lifts off, destroys rocket in last big test of crew capsule</p>
+    </a>
+  </section>
+  <footer>
+    <p>© 2020 World Times </p>
+    <nav>
+      <a href="#">Contact</a>
+      <a href="#">Advertisement</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
