moved img folder so netlify will find them

--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
 
         <li>
           <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">
-            <img src="../img/clickbait.jpg" alt="clickbait logo">
+            <img src="img/clickbait.jpg" alt="clickbait logo">
           </a>
         </li>
 
@@ -45,7 +45,7 @@
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
         <article>
           <div class="corner-ribbon shadow sticky top-left exclude-mobile exclude-tablet">THIS JUST IN!</div>
-          <img src="../img/DT_2020.jpg" class="exclude-mobile exclude-desktop" alt="Donald Trump">
+          <img src="img/DT_2020.jpg" class="exclude-mobile exclude-desktop" alt="Donald Trump">
             <h3 class="large-h3">Breaking News!</h3>
             <p class="large-text">Donald Trump re-elected! <br>
             See his opening speach right here
@@ -60,7 +60,7 @@
       <!-- The small news content  -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/RM.jpeg" alt="Rick from Rick and Morty show">
+          <img src="img/RM.jpeg" alt="Rick from Rick and Morty show">
           <h3 class="small-h3">Your vote matters!</h3>
           <p class="small-text">Family guy or Simpsons? </p>
           <ul class="small-tag">
@@ -73,7 +73,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/ernst.jpg" alt="Ernst Kirchsteiger">
+          <img src="img/ernst.jpg" alt="Ernst Kirchsteiger">
           <h3 class="small-h3">Read it all!</h3>
           <p class="small-text">Ernst´s private sex tape on the loose </p>
           <ul class="small-tag">
@@ -85,7 +85,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/loket.jpg" alt="Leif Loket Olssoon">
+          <img src="img/loket.jpg" alt="Leif Loket Olssoon">
           <h3 class="small-h3">WHAT?!</h3>
           <p class="small-text">Leif "loket" Olsson daiting Bianca´s mother in law! </p>
           <ul class="small-tag">
@@ -97,7 +97,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/insult.jpg" alt="Random dude insults">
+          <img src="img/insult.jpg" alt="Random dude insults">
           <h3 class="small-h3">10 people you must insult before you die</h3>
           <p class="small-text">Nr 3 is legendary. </p>
           <ul class="small-tag">
@@ -109,7 +109,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
+          <img src="img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
@@ -121,7 +121,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
+          <img src="img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
           <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
@@ -133,7 +133,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
+          <img src="img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
@@ -145,7 +145,7 @@
 
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="Donalt Trump">
+          <img src="img/DT_2020.jpg" alt="Donalt Trump">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donald Trump re-elected! </p>
           <ul class="small-tag">
