Made a rough outline

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+
+  <!-- Header -->
+
+  <header class="header">
+
+    <img src="daily-news-logo.png" alt="Newspaper title">
+
+    <nav>
+
+      <a href="#"> Link</a>
+      <a href="#"> Link</a>
+      <a href="#"> Link</a>
+      <a href="#"> Link</a>
+
+
+    </nav>
+
+
+
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+
+    <img src="happyida.JPG" alt="Class image">
+
+    <div>
+      <h2>Ida has started Technigo!</h2>
+
+      <p>
+        She is now taking new exciting steps into the tech community. Hoping to land a great job after
+        this journey. </p>
+
+    </div>
+
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+
+  </section>
+
+  <footer class="footer">
+    <!-- Some info on the footer -->
+
+    <p>Made by IdaAbra, with knowledge gained from</p>
+
+    <img src="logo.svg" alt="Technigo logo">
+
+  </footer>
+
+
+</body>
+
 </html>
