added text to big news article

--- a/code/index.html
+++ b/code/index.html
@@ -32,9 +32,17 @@
       alt="">
   </figure>
 
-  <article class="big-news">
-    <img
-      src="https://images.unsplash.com/photo-1490059830487-2f86fddb2b4b?ixlib=rb-1.2.1&auto=format&fit=crop&w=2900&q=80">
+  <article class="tiles">
+    <a class="tile" href="url">
+      <img
+        src="https://images.unsplash.com/photo-1490059830487-2f86fddb2b4b?ixlib=rb-1.2.1&auto=format&fit=crop&w=2900&q=80">
+      <div class="details">
+        <span class="title">Lorem Ipsum Dolor</span>
+        <span class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore
+          magna aliqua.</span>
+      </div>
+    </a>
   </article>
 
   <main>
