--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>Doggos Today</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -60,6 +60,13 @@
       <img src="snowdoggo.jpg" alt="Snow"></div>
   </section>
 
+  <section div="search">
+    <form class="form" method="GET">
+        <label for="mail">Newsletter:</label><br>
+        <input div="textarea" type="text" name="title" placeholder="Your e-mail">
+        <button>Sign up</button>
+    </form>
+  </section>
 
 <footer>
   <p>Made for Technigo Bootcamp - week 2 project. <br>
