Added hover effect. erased some code that was unneccasarry.

--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
     <!-- Some kind of logo and navbar -->
   </header>
 
-  <p id='date'>Monday, January 20, 2020</p>
+  <p class="date">Monday, January 20, 2020</p>
 
   <!-- The big news content -->
   <!--<section class="container">-->
@@ -49,27 +49,14 @@
     <a href="#">
       <img src="trump.jpg" alt="Placeholder-small">
       <p>A Step-by-Step Guide to Trump’s Impeachment Trial</p>
-      <div>
-        <p>
-          WASHINGTON — The House intends to vote this week to send its articles of impeachment against President Trump
-          to the Senate, prompting only the third impeachment trial of a president in American history.
-          The vote will put to rest nearly a month of uncertainty over when a trial might begin and quickly turn over to
-          the Senate a historic debate over whether Mr. Trump committed what the Constitution describes as “high crimes
-          and misdemeanors.”
-          The Republican-led Senate is all but certain to vote eventually to acquit Mr. Trump. But the path forward
-          remains murky, with few historical precedents and scant constitutional guidance to light the way. While
-          decades-old congressional rules will be dusted off in the coming days, other, potentially grave decisions that
-          could color the outcome of the trial will be settled on the fly.
-          Here is how we expect things to play out on Capitol Hill in the coming days and weeks.</p>
-      </div>
     </a>
     <a href="#">
       <img src="australia.jpg" alt="Placeholder-small">
       <p>Bracing for an Even Worse Weekend of Australia Fires</p>
     </a>
     <a href="#">
-      <img src="greta.jpg" alt="Placeholder-small">
-      <p>2019 Was Second Hottest Year on Record</p>
+      <img src="boing.jpg" alt="Placeholder-small">
+      <p>With Boeing in Cross Hairs, Lion Air Gets a Pass on Poor Safety Record</p>
     </a>
     <a href="#">
       <img src="greta.jpg" alt="Placeholder-small">
@@ -90,8 +77,8 @@
       <p>SpaceX lifts off, destroys rocket in last big test of crew capsule</p>
     </a>
     <a href="#">
-      <img src="space.jpg" alt="Placeholder-small">
-      <p>SpaceX lifts off, destroys rocket in last big test of crew capsule</p>
+      <img src="Hurricane.jpg" alt="Placeholder-small">
+      <p>After the Hurricane, the Battle Is Where, or Even Whether, to Rebuild</p>
     </a>
   </section>
   <footer>
