working on flexbox and boxmodel

--- a/code/index.html
+++ b/code/index.html
@@ -12,12 +12,13 @@
 <body>
   <header class="header">
     <!-- Some kind of logo and navbar -->
-    <img class="logo" src="logo.svg" alt="Technigo logo">
+    <img class="logo" src="https://www.feistees.com/images/uploads/2017/06/twin-peaks-double-r-diner-mug.jpg"
+      alt="Double R diner logo">
     <nav>
-      <a class="order-1" href="#"> one </a>
+      <a href="#"> one </a>
       <a href="#"> two </a>
       <a href="#"> three </a>
-      <a class="order-2" href="#"> four </a>
+      <a href="#"> four </a>
       <a href="#"> five </a>
       <a href="#"> six </a>
       <a href="#"> seven </a>
@@ -28,13 +29,26 @@
 
   <section class="big-news">
     <!-- The big news content -->
-    <img
+    <img class="main-news-img"
       src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
       alt="Agent Cooper">
+    <h1>WHO KILLED LAURA PALMER?</h1>
   </section>
 
   <section class="news-container">
     <!-- The other news  -->
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
     <img
       src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
       alt="Agent Cooper">
