--- a/code/index.html
+++ b/code/index.html
@@ -61,7 +61,7 @@
 
         <!-- Box-1 -->
         <div>
-          <div class="art-video">
+          <div class="art-top">
             <video autoplay loop muted>
               <source src="Greta-short.mp4" type="video/mp4"></video>
           </div>
@@ -71,7 +71,7 @@
 
         <!-- Box-2 -->
         <div>
-          <div class="art-img"><img src="serena-williams.jpg" alt="serena-williams"></div>
+          <div class="art-top"><img src="serena-williams.jpg" alt="serena-williams"></div>
           <div class="titel-img">Sport</div>
           <div class="text-img">Serena Williams Donates Prize Money From Her First Title Win In Three Years To
             Australian Fire Relief</div>
@@ -79,14 +79,14 @@
 
         <!-- Box-3 -->
         <div>
-          <div class="art-img"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
+          <div class="art-top"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
           <div class="titel-img">Business</div>
           <div class="text-img">Budgeting, But Make It Fun: How One Financial Expert Stays On Track</div>
         </div>
 
         <!-- Box-4 -->
         <div>
-          <div class="art-img"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
+          <div class="art-top"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
           <div class="titel-img">Entertainment</div>
           <div class="text-img">29 Actresses You’ll Need To Know In 2020</div>
         </div>
