--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,7 @@
   <header>
 
     <hav class="navigation">
+
       <img class="sidebar-logo" src="logoele3.png"></a>
 
 
@@ -27,11 +28,10 @@
       </div>
     </hav>
 
-    <div class="video-container">
+    <div class="image-container">
 
-      <video autoplay loop muted id="video-play">
-        <source src="techgirl.mp4" type="video/mp4">
-      </video>
+      <img src="paint1.jpg" alt="paint">
+
     </div>
 
   </header>
