--- a/code/index.html
+++ b/code/index.html
@@ -16,18 +16,18 @@
       <h1>Health Daily</h1>
     </div>
     <nav>
-      <a href="">Womens health</a>
-      <a href="">Mens health</a>
+      <a href="" target="_blank">Womens health</a>
+      <a href="" target="_blank">Mens health</a>
       <img class="nav-logo" src="heartbeat.svg" alt="Logo">
-      <a href="">Childrens health</a>
-      <a href="">About us</a>
+      <a href="" target="_blank">Childrens health</a>
+      <a href="" target="_blank">About us</a>
     </nav>
   </header>
 
   <section class="big-news">
     <img src="hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Image of glass containers">
     <div class="big-news-text">
-      <a href="https://www.dn.se/">
+      <a href="https://www.dn.se/" target="_blank">
         <h2>The biggest medical discoveries of 2019</h2>
       </a>
       <p>A lot happened within the medical field in 2019, we have the list with the 10 biggest medical breakthroughs.
@@ -36,58 +36,61 @@
   </section>
 
   <section class="news">
-    <div class="news-cards">
-      <a href="https://www.dn.se/">
+    <article class="news-cards">
+      <a href="#" target="_blank">
         <h3>Why your medication might not work</h3>
       </a>
       <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
-    </div>
+    </article>
 
-    <div class="news-cards">
-      <a href="#">
-        <h3>Strong social connections make you live longer</h3>
+    <article class="news-cards">
+      <a href="#" target="_blank">
+        <h3>Friends make you live longer</h3>
       </a>
       <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
-    </div>
-    <div class="news-cards">
-      <a href="#">
+    </article>
+
+    <article class="news-cards">
+      <a href="#" target="_blank">
         <h3>Why your medication might not work</h3>
       </a>
       <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
-    </div>
+    </article>
 
-    <div class="news-cards">
-      <a href="#">
-        <h3>Strong social connections make you live longer</h3>
+    <article class="news-cards">
+      <a href="#" target="_blank">
+        <h3>Friends make you live longer</h3>
       </a>
       <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
-    </div>
-    <div class="news-cards">
-      <a href="#">
+    </article>
+
+    <article class="news-cards">
+      <a href="#" target="_blank">
         <h3>Why your medication might not work</h3>
       </a>
       <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
-    </div>
+    </article>
 
-    <div class="news-cards">
-      <a href="#">
-        <h3>Strong social connections make you live longer</h3>
+    <article class="news-cards">
+      <a href="#" target="_blank">
+        <h3>Friends make you live longer</h3>
       </a>
       <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
-    </div>
-    <div class="news-cards">
-      <a href="#">
+    </article>
+
+    <article class="news-cards">
+      <a href="#" target="_blank">
         <h3>Why your medication might not work</h3>
       </a>
       <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
-    </div>
+    </article>
 
-    <div class="news-cards">
-      <a href="#">
-        <h3>Strong social connections make you live longer</h3>
+    <article class="news-cards">
+      <a href="#" target="_blank">
+        <h3>Friends make you live longer</h3>
       </a>
       <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
-    </div>
+    </article>
   </section>
 
   <footer>
