Added content and tried styling it

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-all">
           <a href="#" class="navbar">Blog</a>
           <a href="#" class="navbar">Archive</a>
-          <a href="#"><img id="black-logo-top" src="/logo/black_logo.png" alt="Bläck logo"></a>
+          <a href="#"><img class="black-logo-top" src="/logo/black_logo.png" alt="Bläck logo"></a>
           <a href="#" class="navbar">Store</a>
           <a href="#" class="navbar">About</a>
           <a href="#main-menu" class="menu-toggle">
@@ -29,16 +29,15 @@
           </a>
         </div>
       </nav>
-
-      
-
     </header>
 
-    <section class="big-news">
+    
       <!-- The big news content -->
+    <section class="big-news"></section>
       <a href="#">
-        <img src="/pics/Articles-pics/glacier.jpeg" alt="Glacier">
+        <img class="glacier-img" src="/pics/Articles-pics/glacier.jpeg" alt="Glacier">
         <h1>Gardens of Branching Paths</h1>
+        <h4>Photographer Rhona-Lee Melendez delights with her unique point of view.</h4>
       </a>
     </section>
 
@@ -47,57 +46,60 @@
 
     <!-- Portrett Section x2 -->
     <h2>Profile</h2>
-    <section>
+    <section class="portrett-sec">
       <!-- The other news  -->
-      <span class="portrett">
+      <a href="#" class="portrett">
         <img src="/pics/portrett/neon_building.jpeg" alt="Neon building">
-      </span class="portrett">
+      </a>
 
-      <span class="portrett">
+      <a href="#" class="portrett">
         <img src="/pics/portrett/swan.jpeg" alt="Black swan">
-      </span>
+      </a>
     </section>
 
+    <hr class="style-four">
 
     <!-- Most Read Section x4 -->
     <h2>Most Read</h2>
 
     <section>
-      <span class="most-read">
+      <a href="#" class="most-read">
         <img src="/pics/Articles-pics/greenhouse.jpeg" alt="Greenhouse with plants">
         <h3>Meditating Greens</h3>
         <h4>By Maurice Hall</h4>
-      </span>
+      </a>
     </section>
 
     <section>
-      <span class="most-read">
+      <a href="#" class="most-read">
         <img src="/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
         <h3>Their Story Wrote Itself</h3>
         <h4>By Rebecca Gustavsson</h4>
-      </span>
+      </a>
     </section>
 
     <section>
-      <span class="most-read">
+      <a href="#" class="most-read">
         <img src="/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
         <h3>Friendship For A Lifetime</h3>
         <h4>By Eryk Stamp</h4>
-      </span>
+      </a>
     </section>
    
     <section>
-      <span class="most-read">
+      <a href="#" class="most-read">
         <img src="/pics/Articles-pics/mural.jpeg" alt="Colorful mural">
         <h3>Casually Misbehaving</h3>
         <h4>By Belinda Laila Beech</h4>
-      </span>
+      </a>
     </section>
+
+    <hr class="style-four">
 
     <!-- Gallery Section x1 -->
     <h2>Gallery</h2>
     <section>
-      <span class="gallery-span">
+      <a href="#" class="gallery-span">
         <img src="/pics/gallery/grandi01.jpg" alt="Sunset reflecting in steel doors on a hut">
        <div id="arrows">
         <i class="fas fa-arrow-left"></i>
@@ -105,9 +107,96 @@
       </div>
         <h3>Soft Power</h3>
         <h4>Photographer Rhona-Lee Melendez delights with her unique point of view.</h4>
-      </span>
+      </a>
     </section>
 
+    <hr class="style-four">
+
+    <!-- Article section x8 -->
+    <h2>Articles</h2>
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/seals.jpeg" alt="Two seals">
+        <h3>Seal Of Approval</h3>
+        <h4>By Husna Bass</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/trudeau.jpeg" alt="Canadian Prime minister parttaking in Gay Pride">
+        <h3>"We Are Allies"</h3>
+        <h4>By Geoff Fields</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/word_cant_change_itself.jpeg" alt="Poster that reads: The World Won't Change Itself">
+        <h3>What have we become?</h3>
+        <h4>By Erin Herman</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/polar_bear.jpeg" alt="Polar Bear Underwater">
+        <h3>One Thing You Can Do: Know Your Climate Facts</h3>
+        <h4>By Susan Shain</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/tunnel.jpeg" alt="Tunnel">
+        <h3>The Neighborhoods We Will Not Share</h3>
+        <h4>By Dominic Copeland</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/horses.jpeg" alt="Horses">
+        <h3>Holding Tight to Tradition</h3>
+        <h4>By Diya Monroe</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
+        <h3>Friendship For A Lifetime</h3>
+        <h4>By Eryk Stamp</h4>
+      </a>
+    </section>
+
+    <section>
+      <a href="#" class="articles">
+        <img src="/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
+        <h3>Their Story Wrote Itself</h3>
+        <h4>By Rebecca Gustavsson</h4>
+      </a>
+    </section>
+
+<!-- Footer -->
+    <section class="footer">
+      <a href="#"><img class="black-logo-bottom" src="/logo/black_logo.png" alt="Bläck logo"></a>
+      <input type="button" class="subscription" value="Subscribe">
+      <p>&copy; Copyright 2020 <br> Bläck Magazine</p>
+    </section>
+
+    <section class="footer-links">
+      <ul>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Archive</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Search</a></li>
+      </ul>
+    </section>
+
+    <div>
+      <img class="technigo-logo" src="/logo/logo.svg" alt="The Technigo Logo">
+    </div>
 
   </body>
 </html>
